fix the overflow problem for the contact form

--- a/src/components/forms/contact/contactForm.css
+++ b/src/components/forms/contact/contactForm.css
@@ -1,3 +1,9 @@
+.contact-form-container {
+  position: relative;
+  width: 100%;
+  max-width: 780px;
+}
+
 .contact-form {
   display: flex;
   flex-direction: column;
@@ -72,6 +78,9 @@ input[type="number"] {
 }
 
 @media screen and (max-width: 1080px) {
+  .contact-form-container {
+    max-width: var(--max-elements-width);
+  }
   .contact-form {
     max-width: 100%;
   }
